fix: align left sidebar with Figma (#490)

--- a/wdl-doc/theme/src/main.css
+++ b/wdl-doc/theme/src/main.css
@@ -268,7 +268,7 @@
    * Left sidebar
    */
   .left-sidebar__indent {
-    @apply w-px h-full border rounded-none border-gray-700 ml-1.5 mr-1;
+    @apply w-px h-full border rounded-none border-gray-800 ml-1.5 mr-1;
   }
   .left-sidebar__workflow-indent-hidden {
     @apply w-px h-full mr-2 flex-none;
@@ -277,7 +277,7 @@
     @apply w-px h-full mr-2 flex-none border rounded-none border-gray-700;
   }
   .left-sidebar__container {
-    @apply flex flex-col size-full gap-y-3 text-nowrap pt-4 pl-4 bg-[#111420] text-slate-400;
+    @apply flex flex-col size-full text-nowrap pt-4 bg-[#111420] text-slate-400;
   }
   .left-sidebar__searchbar-form {
     @apply flex-none items-center gap-x-2 w-9/10 h-[40px] rounded-md border border-slate-700 mb-4;
@@ -286,25 +286,25 @@
     @apply flex flex-row items-center size-full;
   }
   .left-sidebar__searchbox {
-    @apply flex size-full text-slate-300 pl-2;
+    @apply flex text-slate-400 w-full h-full px-8 outline-none bg-transparent items-center rounded-md border border-slate-700 transition-colors focus:border-slate-400;
   }
   .left-sidebar__search-clear {
     @apply flex size-6 hover:cursor-pointer ml-2 pr-2;
   }
   .left-sidebar__tabs-container {
-    @apply flex items-center pr-4;
+    @apply flex items-center;
   }
   .left-sidebar__tabs {
-    @apply flex grow items-center gap-x-1 border-b hover:cursor-pointer border-b-slate-700;
+    @apply flex grow items-center gap-x-1 border-b hover:cursor-pointer border-b-slate-700 py-3 px-1.5;
   }
   .left-sidebar__icon {
     @apply size-4;
   }
   .left-sidebar__content-container {
-    @apply size-full rounded-md pl-2 overflow-x-clip overflow-y-scroll;
+    @apply size-full rounded-md overflow-x-clip overflow-y-scroll pl-4 pr-2;
   }
   .left-sidebar__content {
-    @apply w-full pr-3;
+    @apply w-full;
   }
   .left-sidebar__content-item {
     @apply flex flex-row items-center gap-x-1 h-8;
@@ -313,7 +313,7 @@
     @apply flex flex-row items-center gap-x-1;
   }
   .left-sidebar__search-result-item {
-    @apply flex flex-col hover:bg-slate-800 border-b border-gray-600 text-slate-50 pl-2 mt-2;
+    @apply flex flex-col hover:bg-slate-800 border-b border-gray-700 text-slate-50 pl-2 pt-2;
   }
   .left-sidebar__search-result-item-container {
     @apply flex flex-row items-center gap-x-1 mb-2;
